<resources>
    <string name="app_name">TeamTuringApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_load">Load TM</string>
    <string name="action_delete">Delete TM</string>
    <string name="action_new">New TM</string>
    <string name="action_highscore">Highscore</string>
    <string name="rule_description">  CURRENT-READS-WRITES-MOVES-NEXT</string>
    <string name="edit_rule">Edit Rule</string>
    <string name="current_state">CURRENT STATE</string>
    <string name="reads_sign">READS SIGN</string>
    <string name="writes_sign">WRITES SIGN</string>
    <string name="moves">MOVES</string>
    <string name="next_state">NEXT STATE</string>
    <string name="reload">RELOAD</string>
    <string name="save">SAVE</string>
    <string name="create_new_rule">Create New Rule</string>
    <string name="cancel">CANCEL</string>
    <string name="create_new_tm">Create New TM</string>
    <string name="tm_name">TM NAME</string>
    <string name="tape_content">TAPE CONTENT</string>
    <string name="goal_content">GOAL CONTENT</string>
    <string name="author">AUTHOR</string>
    <string name="initial_state">INITIAL STATE</string>
    <string name="tape_count">TAPE COUNT</string>
    <string name="heads_position">HEADS POSITION</string>
    <string name="wanted_tape_content">Wanted Tape Content</string>
    <string name="current_tape_content">Current Tape Content</string>
    <string name="step">STEP</string>
    <string name="reset">RESET</string>
    <string name="show">SHOW</string>
    <string name="play">PLAY</string>
    <string name="about">ABOUT</string>
    <string name="help">HELP</string>
    <string name="player_name">Player Name</string>
    <string name="help_run">Just click on play. To run the TM click on step.</string>
    <string name="help_new_tm">Click on the three dots in the upper-right corner. Fill out the mask and save.</string>
    <string name="help_load_tm">Click on the three dots in the upper-right corner and select load. Your default file browser will open and let you select the file.</string>
    <string name="help_change_rule">Click on one of the rules in the edit view (swipe left after run).</string>
    <string name="help_delete_rule">Long-click on one of the rules in the edit view (swipe left after run).</string>
    <string name="help_add_rule">Click on the + sign in the edit view and enter the new rules content.</string>
    <string name="help_show_tm_state">Click on the show button. The game will display the different states and additional information within a text message.</string>
    <string name="help_high_scores">Click on the three dots in the upper-right corner. Then click on highscore</string>
    <string name="help_change_name">Click on the three dots in the upper-right corner. Then click on settings and enter your name.</string>
    <string name="delete_question">Do you really want to delete this TM?</string>
    <string name="delete_succeed">TM deleted!</string>
    <string name="delete_failed">Could not delete TM!</string>

</resources>


